@@ -33,7 +33,7 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
  * @brief Defines a helper class for the Caching Strategies.
  *
  * This class defines the methods commonly used by the different
- * caching strategies. For instance: <clear_cache> method which
+ * caching strategies. For instance: clear_cache() method which
  * decides and purges the entry from the container.  @note This
  * class helps in the caching_strategies using a container
  * containing entries of <KEY, ACE_Pair<VALUE, attributes>>
@@ -82,7 +82,7 @@ protected:
  * @brief Defines a helper class for the Caching Strategies.
  *
  * This class defines the methods commonly used by the different
- * caching strategies. For instance: <clear_cache> method which
+ * caching strategies. For instance: clear_cache() method which
  * decides and purges the entry from the container.  @note This
  * class helps in the caching_strategies using a container
  * containing entries of <KEY, Svc_Handler> kind. The attributes
@@ -107,7 +107,7 @@ public:
   ~ACE_Recyclable_Handler_Caching_Utility (void);
 
   /**
-   * Purge entries from the <container>. The Cleanup_Strategy will do
+   * Purge entries from the @a container. The Cleanup_Strategy will do
    * the actual job of cleanup once the entries to be cleaned up are
    * decided.
    */
@@ -158,7 +158,7 @@ public:
   ~ACE_Refcounted_Recyclable_Handler_Caching_Utility (void);
 
   /**
-   * Purge entries from the <container>. The Cleanup_Strategy will do
+   * Purge entries from the @a container. The Cleanup_Strategy will do
    * the actual job of cleanup once the entries to be cleaned up are
    * decided.
    */
@@ -192,7 +192,7 @@ protected:
  * @brief Defines a helper class for the Caching Strategies.
  *
  * This class defines the methods commonly used by the different
- * caching strategies. For instance: <clear_cache> method which
+ * caching strategies. For instance: clear_cache() method which
  * decides and purges the entry from the container.  @note This
  * class helps in the caching_strategies using a container
  * containing entries of <KEY, HANDLER> kind where the HANDLER
@@ -216,7 +216,7 @@ public:
   ~ACE_Handler_Caching_Utility (void);
 
   /**
-   * Purge entries from the <container>. The Cleanup_Strategy will do
+   * Purge entries from the @a container. The Cleanup_Strategy will do
    * the actual job of cleanup once the entries to be cleaned up are
    * decided.
    */
@@ -249,7 +249,7 @@ protected:
  * @brief Defines a dummy helper class for the Caching Strategies.
  *
  * This class defines the methods commonly used by the different
- * caching strategies. For instance: <clear_cache> method which
+ * caching strategies. For instance: clear_cache() method which
  * decides and purges the entry from the container.  @note This
  * class is be used with the Null_Caching_Strategy. The
  * Cleanup_Strategy is the callback class to which the entries to
@@ -271,7 +271,7 @@ public:
   ~ACE_Null_Caching_Utility (void);
 
   /**
-   * Purge entries from the <container>. The Cleanup_Strategy will do
+   * Purge entries from the @a container. The Cleanup_Strategy will do
    * the actual job of cleanup once the entries to be cleaned up are
    * decided. @note Here it is a no-op.
    */
